--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
     height: 100%;
-    overflow-x: hidden;
+    overflow: auto;
 }
 
 body {
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     background: #fbd2f2;
-    overflow: hidden;
+    overflow: auto;
     color: var(--text);
     font-family: 'Baloo 2';
     margin: 20px;
@@ -107,7 +107,8 @@ body {
     color: white;
     text-decoration: none;
     font-weight: 600;
-    font-size: 16px;
+    text-align: center;
+    font-size: 20px;
     padding: 10px 20px;
     border-radius: 20px;
     transition: all 0.2s ease-in-out;
@@ -121,3 +122,83 @@ body {
     background-color: var(--accent);
     color: var(--text);
   }
+  
+  .bubble-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  
+  .bubble {
+    display: flex;
+    flex-direction: column; /* stack text above image */
+    align-items: center;
+    padding: 1px;
+    border: 2px solid #fa8fe8;
+    background-color: #edaef8;
+    color: #f40e0e;
+    border-radius: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    font-family: 'Baloo 2', cursive;
+    transition: background 0.3s, color 0.3s;
+    cursor: default;
+    width: 300px; /* adjust as needed */
+    height: 400px;
+  }
+  
+  .bubble img {
+    width: 250px;
+    height: 340px;
+    object-fit: cover;
+    border-radius: 12px;
+    margin-top: 12px;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .bubble img:active {
+    transform: scale(1.2);
+  }
+  
+  
+  .bubble:hover {
+    background-color: #eb93dc;
+    color: white;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+  
